--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ kotlin.native.cacheKind=none
 
 #Android
 android.useAndroidX=true
+android.enableJetifier=true
 android.compileSdk=33
 android.targetSdk=33
 android.minSdk=24
