--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -1,5 +1,12 @@
+# Uncomment the next line to define a global platform for your project
+# platform :ios, '9.0'
+
 target 'iosApp' do
+  # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
-  platform :ios, '14.1'
+
+  # Pods for iosApp
   pod 'shared', :path => '../shared'
+
+
 end
